[gd_scene load_steps=4 format=2]

[ext_resource path="res://lon tawa/soweli.png" type="Texture" id=1]
[ext_resource path="res://lon tawa/soweli.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 57, 50 )

[node name="soweli" type="KinematicBody2D"]
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="collision box" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="floor1" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 55 )
collision_mask = 2

[node name="floor2" type="RayCast2D" parent="."]
position = Vector2( -50, 0 )
enabled = true
cast_to = Vector2( 0, 55 )
collision_mask = 2

[node name="floor3" type="RayCast2D" parent="."]
position = Vector2( 50, 0 )
enabled = true
cast_to = Vector2( 0, 55 )
collision_mask = 2

[node name="Label" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
